--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -236,33 +236,95 @@ nav.mobile {
 
 /* Exhibits */
 
+#exhibits {
+  margin-bottom: 2rem;
+}
+
 #exhibits h1.top {
   font-size: 3rem;
   text-align: center;
-  padding-bottom: 2rem 0;
+  padding: 2rem 0;
 }
 
-#exhibits .text h1 {
-  font-size: 2rem;
-  text-align: left;
-  margin: 1rem;
+#exhibits .video h1 {
+  font-size: 2.5rem;
+  padding-top: 2rem;
+}
+
+#exhibits .video h2 {
+  width: 90%;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  padding-top: 1.5rem;
+  font-weight: 400;
 }
 
 .showing {
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin: 0;
 }
 
 .video {
+  margin: 0 2rem;
   width: 60%;
 }
+
+video {
+  width: auto;
+}
+
+#exhibits .thesis {
+  margin: 0;
+}
+
+#exhibits .info {
+  display: inline-flex;
+  align-items: center;
+  height: 35%;
+  width: 100%;
+}
+
+#exhibits img {
+  margin: 1rem;
+  width: 30%;
+  height: auto;
+}
+
+#exhibits .info .text {
+  margin-left: 2rem;
+}
+
+#exhibits .text h1 {
+  font-size: 2rem;
+  line-height: 1.5;
+  padding-bottom: 1rem;
+}
+
+#exhibits .text h2 {
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.prototype {
+  background-color: hsl(120, 0%, 90%);
+}
+
 
 /* Footer */
 
 footer {
   display: flex;
   justify-content: space-between;
-  margin: 1rem 1.5rem;
+  font-weight: 400;
+  border-top: 2px solid hsl(120, 0%, 90%);
+  padding: 1rem 1.5rem;
+  height: 4rem;
+}
+
+.copyright span {
+  padding-right: 0.25rem;
+}
+
+.terms span{
+  padding-left: 1rem;
 }
