--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -69,7 +69,7 @@ header {
   border-right: none;
 }
 
-nav.mobile {
+.mobile {
   display: none;
 }
 
@@ -156,32 +156,36 @@ nav.mobile {
   border: 2px solid hsl(120, 0%, 90%);
 }
 
-.info img {
+#features img.desktop {
   margin: 1rem;
   width: 33%;
   height: auto;
 }
 
-.info .text {
+#features img.mobile {
+  display: none;
+}
+
+#features .info .text {
   width: 65%;
   margin-left: 2rem;
   line-height: 2;
 }
 
-.info .text h1 {
+#features .info .text h1 {
   font-size: 1.5rem;
 }
 
-.info .text h2 {
+#features .info .text h2 {
   font-size: 1rem;
 }
 
-.info .text h3 {
+#features .info .text h3 {
   font-size: 1rem;
   color: blue;
 }
 
-.lecture {
+#features .lecture {
   background-color: hsl(120, 0%, 90%);
 }
 
@@ -216,21 +220,21 @@ nav.mobile {
   margin: 0.5rem 1rem;
 }
 
-.sections {
+#majors .sections {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
 }
 
-.courses {
+#majors .courses {
   width: 30%;
   padding-bottom: 2rem;
-  background: white;
+  background-color: white;
   margin: 1rem;
 }
 
-.courses img {
+#majors .courses img {
   margin: 0;
 }
 
@@ -259,17 +263,21 @@ nav.mobile {
   font-weight: 400;
 }
 
-.showing {
+#exhibits .showing {
   display: flex;
 }
 
-.video {
+#exhibits .video {
   margin: 0 2rem;
   width: 60%;
 }
 
-video {
+#exhibits video.desktop {
   width: auto;
+}
+
+#exhibits video.mobile {
+  display: none;
 }
 
 #exhibits .thesis {
@@ -321,10 +329,161 @@ footer {
   height: 4rem;
 }
 
-.copyright span {
+footer .copyright span {
   padding-right: 0.25rem;
 }
 
-.terms span{
+footer .terms span{
   padding-left: 1rem;
+}
+
+/* Resizing */
+
+@media only screen and (max-width: 1280px) {
+
+}
+@media only screen and (max-width: 960px) {
+
+}
+@media only screen and (max-width: 450px) {
+  header {
+    padding: 0;
+    justify-content: center;
+  }
+  .logo {
+    display: none;
+  }
+  .desktop {
+    display: none;
+  }
+  .mobile {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+  .mobile img {
+    height: 75%;
+    padding: 0 25%;
+  }
+  #banner {
+    flex-direction: column;
+  }
+  #banner img {
+    width: 100%;
+    padding: 0;
+  }
+  #banner .text {
+    margin: 2rem 1rem;
+  }
+  #banner h1 {
+    font-size: 2.25rem;
+  }
+  #banner h2 {
+    font-size: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+  #banner h3 {
+    margin-top: 0;
+    width: 100%;
+    background-color: hsl(120, 0%, 60%);
+  }
+  #features .main {
+    display: none;
+  }
+  #features .dates {
+    margin: 0 0 2rem 0;
+  }
+  #features .info {
+    height: auto;
+    display: block;
+    margin: 1rem;
+    border: none;
+  }
+  #features img.desktop {
+    display: none;
+  }
+  #features img.mobile {
+    display: block;
+    width: 100%;
+    height: 60%;
+    margin-bottom: 1rem;
+  }
+  #features .info .text {
+    width: 85%;
+    margin-left: 1rem;
+  }
+  #features .lecture {
+    background-color: white;
+  }
+  #majors {
+    background-color: white;
+    border-top: 1px solid hsl(120, 0%, 85%);
+    border-bottom: 1px solid hsl(120, 0%, 85%);
+    padding: 1rem 0;
+  }
+  #majors img {
+    display: none;
+  }
+  #majors h1.top {
+    font-size: 2.5rem;
+    padding: 1rem 0;
+  }
+  #majors .text {
+    margin: 0;
+  }
+  #majors .text h1 {
+    font-size: 1.5rem;
+    padding: 1rem;
+    margin: 0;
+  }
+  #majors .text h2,
+  #majors .text h3 {
+    display: none;
+  }
+  #majors .sections {
+    display: block;
+    margin: 0 1rem;
+  }
+  #majors .courses {
+    width: 100%;
+    margin: 0 1rem 0.5rem 0;
+    background-color: hsl(120, 0%, 85%);
+  }
+  #exhibits {
+    margin-bottom: 1.5rem;
+    margin-top: 1rem;
+  }
+  #exhibits h1.top {
+    font-size: 2.5rem;
+    padding: 1rem 0;
+  }
+  #exhibits .showing h1,
+  #exhibits .showing h2,
+  #exhibits .thesis {
+    display: none;
+  }
+  #exhibits .showing {
+    display: block;
+  }
+  #exhibits .video {
+    margin: 0;
+    width: 100%;
+  }
+  #exhibits video.desktop {
+    display: none;
+  }
+  #exhibits video.mobile {
+    display: block;
+  }
+  footer {
+    display: inline;
+    border-top: none;
+  }
+  footer .copyright {
+    padding: 1rem;
+  }
+  footer .terms {
+    display: none;
+  }
 }
