--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,11 +15,24 @@
 }
 
 body {
+  margin: 0 3rem;
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 800;
+  background-color: hsl(160, 80%, 80%);
   color: hsl(120, 0%, 30%);
+}
+
+.container {
+  border-left: 2px solid hsl(120, 0%, 50%);
+  border-right: 2px solid hsl(120, 0%, 50%);
+}
+
+.main-content {
+  position: relative;
+  z-index: 15;
+  top: 4rem;
 }
 
 /* Header */
@@ -28,17 +41,20 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: white;
+  background-color: hsl(120, 100%, 40%);
+  color: hsl(120, 100%, 0%);
+  text-shadow: 2px 2px hsl(120, 100%, 80%);
   height: 4rem;
-  width: auto;
   padding: 0 1.5rem;
-  font-size: 1.5rem;
+  position: fixed;
   z-index: 20;
+  width: 92.44%;
 }
 
 header .logo {
   display: inline-flex;
   align-items: center;
+  font-size: 2rem;
 }
 
 header .logo img {
@@ -46,26 +62,26 @@ header .logo img {
 }
 
 header #first {
-  font-weight: bold;
-  color: black;
+  font-weight: 800;
 }
 
 header #second {
-  color: grey;
+  color: hsl(240, 100%, 50%);
 }
 
-header .desktop {
+header .desktop ul {
   display: inline-flex;
+  font-size: 1.5rem;
 }
 
-header .desktop a {
-  border-right: 16px solid hsla(180, 100%, 50%, 0.5);
+header .desktop li {
+  border-right: 1rem solid hsl(180, 100%, 50%);
   margin: 0;
   padding: 1.25rem 0;
   font-weight: 400;
 }
 
-header .desktop a:last-child {
+header .desktop li:last-child {
   border-right: none;
 }
 
@@ -78,7 +94,7 @@ header .mobile {
 #banner {
   display: flex;
   align-items: center;
-  background-color: hsl(120, 0%, 80%);
+  background-color: hsl(180, 40%, 80%);
   line-height: 1.5;
 }
 
@@ -94,17 +110,19 @@ header .mobile {
 #banner h1 {
   font-size: 3rem;
   padding-bottom: 1rem;
+  text-shadow: -2px -2px hsl(120, 100%, 80%);
 }
 
 #banner h2 {
   font-size: 2rem;
   padding-bottom: 1rem;
+  color: hsl(120, 100%, 20%);
 }
 
 #banner h3 {
   font-size: 1.5rem;
-  background-color: black;
-  color: white;
+  background-color: hsl(120, 100%, 40%);
+  color: hsl(120, 100%, 0%);
   padding: 0.5rem 0;
   margin-top: 2rem;
   text-align: center;
@@ -115,6 +133,7 @@ header .mobile {
 
 #features  {
   display: flex;
+  background-color: hsl(120,  100%, 80%);
 }
 
 #features .main {
@@ -129,6 +148,7 @@ header .mobile {
 #features .main h1 {
   font-size: 2.5rem;
   padding-top: 2rem;
+  color: hsl(120, 100%, 20%);
 }
 
 #features .main h2 {
@@ -141,6 +161,8 @@ header .mobile {
 #features .main h3 {
   font-size: 1rem;
   padding-top: 2rem;
+  font-weight: bold;
+  color: hsl(120, 100%, 0%);
 }
 
 #features .dates {
@@ -153,7 +175,8 @@ header .mobile {
   display: inline-flex;
   align-items: center;
   width: 100%;
-  border: 2px solid hsl(120, 0%, 90%);
+  border: 2px solid hsl(120, 0%, 50%);
+  border-right: none;
 }
 
 #features img.desktop {
@@ -185,14 +208,25 @@ header .mobile {
   color: blue;
 }
 
+#features .orientation {
+  background-color: hsl(180, 100%, 65%);
+  border-bottom: none;
+}
+
+#features .campus {
+  background-color: hsl(180, 100%, 75%);
+  border-bottom: none;
+}
+
 #features .lecture {
-  background-color: hsl(120, 0%, 90%);
+  background-color: hsl(120, 100%, 60%);
 }
 
 /* Majors */
 
 #majors {
-  background-color: hsl(120, 10%, 95%);
+  width: auto;
+  background-color: hsl(180, 40%, 80%);
   padding: 0 4.5rem 2rem 4.5rem;
 }
 
@@ -200,6 +234,7 @@ header .mobile {
   font-size: 3rem;
   text-align: center;
   padding: 2rem 0;
+  color: hsl(240, 100%, 50%);
 }
 
 #majors .text {
@@ -210,6 +245,7 @@ header .mobile {
   font-size: 2rem;
   text-align: left;
   margin: 1rem;
+  text-shadow: 2px 0 hsl(120, 100%, 20%);
 }
 
 #majors .text h2,
@@ -218,6 +254,10 @@ header .mobile {
   font-weight: 400;
   line-height: 1.5;
   margin: 0.5rem 1rem;
+}
+
+#majors .text h3 {
+  color: hsl(240, 100%, 30%);
 }
 
 #majors .sections {
@@ -230,7 +270,8 @@ header .mobile {
 #majors .courses {
   width: 30%;
   padding-bottom: 2rem;
-  background-color: white;
+  background-color: hsl(90,  100%, 95%);
+  border: 4px solid hsl(120, 100%, 80%);
   margin: 1rem;
 }
 
@@ -242,13 +283,16 @@ header .mobile {
 /* Exhibits */
 
 #exhibits {
-  margin-bottom: 2rem;
+  position: relative;
+  padding-bottom: 2rem;
+  color: hsl(120, 0%, 20%);
 }
 
 #exhibits h1.top {
   font-size: 3rem;
   text-align: center;
   padding: 2rem 0;
+  color: hsl(120, 100%, 20%);
 }
 
 #exhibits .video h1 {
@@ -270,7 +314,22 @@ header .mobile {
 
 #exhibits .video.desktop {
   margin: 0 1.5rem;
+  width: auto;
+}
+
+#exhibits .video.desktop video {
   width: 100%;
+  opacity: 0.5;
+  transition-duration: 1s;
+  transition-delay: 200ms;
+  transition-timing-function: ease-out;
+}
+
+#exhibits .video.desktop video:hover {
+  opacity: 1;
+  transition-duration: 1s;
+  transition-delay: 200ms;
+  transition-timing-function: ease-out;
 }
 
 #exhibits .video.mobile {
@@ -284,13 +343,12 @@ header .mobile {
 #exhibits .info {
   display: inline-flex;
   align-items: center;
-  height: 35%;
+  height: auto;
   width: 100%;
 }
 
-#exhibits img {
+#exhibits .thesis img {
   margin: 1rem;
-  width: 30%;
   height: auto;
 }
 
@@ -310,8 +368,12 @@ header .mobile {
   line-height: 1.2;
 }
 
-.prototype {
-  background-color: hsl(120, 0%, 90%);
+#exhibits .prototype {
+  background-color: hsl(180, 40%, 80%);
+}
+
+#exhibits .newyork {
+  background-color: hsl(120,  100%, 80%);
 }
 
 
@@ -321,9 +383,10 @@ footer {
   display: flex;
   justify-content: space-between;
   font-weight: 400;
-  border-top: 2px solid hsl(120, 0%, 90%);
+  border-top: 2px solid hsl(120, 0%, 50%);
   padding: 1rem 1.5rem;
   height: 4rem;
+  color: hsl(120, 0%, 10%);
 }
 
 footer .copyright span {
@@ -343,9 +406,15 @@ footer .terms span{
 
 }
 @media only screen and (max-width: 450px) {
+  body {
+    margin: 0;
+  }
   header {
     padding: 0;
     justify-content: center;
+    position: fixed;
+    z-index: 20;
+    width: 100%;
   }
   header .logo {
     display: none;
@@ -362,6 +431,17 @@ footer .terms span{
   header .mobile img {
     height: 75%;
     padding: 0 25%;
+  }
+  .container {
+    border-left: none;
+    border-right: none;
+  }
+  .main-content {
+    max-width: 450px;
+    position: relative;
+    z-index: 15;
+    left: 0;
+    border: none;
   }
   #banner {
     flex-direction: column;
@@ -395,7 +475,7 @@ footer .terms span{
     height: auto;
     display: block;
     margin: 1rem;
-    border: none;
+    border: 1px solid hsl(120, 100%, 0%);
   }
   #features img.desktop {
     display: none;
@@ -403,18 +483,15 @@ footer .terms span{
   #features img.mobile {
     display: block;
     width: 100%;
-    height: 60%;
+    height: auto;
     margin-bottom: 1rem;
   }
   #features .info .text {
     width: 85%;
     margin-left: 1rem;
   }
-  #features .lecture {
-    background-color: white;
-  }
   #majors {
-    background-color: white;
+    background-color: hsl(90,  100%, 100%);
     border-top: 1px solid hsl(120, 0%, 85%);
     border-bottom: 1px solid hsl(120, 0%, 85%);
     padding: 1rem 0;
@@ -448,12 +525,12 @@ footer .terms span{
     background-color: hsl(120, 0%, 85%);
   }
   #exhibits {
-    margin-bottom: 1.5rem;
-    margin-top: 1rem;
+    padding-bottom: 1.5rem;
+    padding-top: 2rem;
   }
   #exhibits h1.top {
     font-size: 2.5rem;
-    padding: 1rem 0;
+    padding: 0 0 1rem 0;
   }
   #exhibits .showing h1,
   #exhibits .showing h2,
@@ -466,22 +543,36 @@ footer .terms span{
   #exhibits .video {
     margin: 0;
     width: 100%;
+    height: auto;
+    border: none;
   }
   #exhibits .video.desktop {
     display: none;
   }
   #exhibits .video.mobile {
     display: block;
-    border: 2px solid grey;
+  }
+  #exhibits .video.mobile video {
+    opacity: 0.5;
+    transition-duration: 1s;
+    transition-delay: 200ms;
+    transition-timing-function: ease-out;
+  }
+  #exhibits .video.mobile video:hover {
+    opacity: 1;
+    transition-duration: 1s;
+    transition-delay: 200ms;
+    transition-timing-function: ease-out;
   }
   footer {
     display: inline;
-    border-top: none;
+    border: none;
+    margin: 1rem;
   }
   footer .copyright {
-    padding: 1rem;
+    padding-left: 1rem;
   }
-  footer .terms {
+  footer .terms span {
     display: none;
   }
 }
